// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MenuItem renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuItem-stringContent"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders checkmarked 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <div
              class="PicassoContainer-flex PicassoContainer-inline PicassoMenuItem-iconContainer"
              style="margin-right: 0.5rem;"
            >
              <svg
                class="PicassoSvgCheckMinor16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m6.5 9.793 4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2Z"
                />
              </svg>
            </div>
            <span
              class="PicassoMenuItem-stringContent PicassoMenuItem-stringContentSemibold"
            >
              1
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders in title case with global prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="Picasso-root"
    >
      <li
        aria-disabled="false"
        class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        role="menuitem"
        tabindex="-1"
      >
        <div
          class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
        >
          <div
            class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
          >
            <div
              class="PicassoContainer-centerAlignItems PicassoContainer-flex"
            >
              <span
                class="PicassoMenuItem-stringContent"
              >
                Arrow
              </span>
            </div>
          </div>
        </div>
      </li>
    </div>
  </div>
</div>
`;

exports[`MenuItem renders in title case with local prop 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuItem-stringContent"
            >
              Arrow
            </span>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders with a sub menu arrow 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuItem-stringContent"
            >
              1
            </span>
            <div
              class="PicassoContainer-flex PicassoContainer-inline"
              style="margin-left: 0.5rem;"
            >
              <svg
                class="PicassoSvgChevronMinor16-root"
                style="min-width: 16px; min-height: 16px;"
                viewBox="0 0 16 16"
              >
                <path
                  d="m5.997 3.29 4 4 .707.707-.707.707-4 4-.707-.707 4-4-4-4 .707-.707Z"
                />
              </svg>
            </div>
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;

exports[`MenuItem renders with description 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <li
      aria-disabled="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root PicassoMenuItem-root PicassoMenuItem-light MuiMenuItem-gutters PicassoMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="menuitem"
      tabindex="-1"
    >
      <div
        class="PicassoContainer-flex PicassoMenuItem-itemWrapper"
      >
        <div
          class="PicassoContainer-flex PicassoContainer-column PicassoMenuItem-content"
        >
          <div
            class="PicassoContainer-centerAlignItems PicassoContainer-flex"
          >
            <span
              class="PicassoMenuItem-stringContent"
            >
              1
            </span>
          </div>
          <div
            class="PicassoMenuItem-description"
            style="margin-top: 0.25rem;"
          >
            details
          </div>
        </div>
      </div>
    </li>
  </div>
</div>
`;
